plugins {
    id 'eclipse'
    id 'idea'
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.103'
}

group = 'com.lovetropics.donations'
base {
    archivesName = 'LTDonations'
}

def env = System.getenv()

ext.buildnumber = 0
project.buildnumber = env.BUILD_NUMBER ?: 'custom'

if (env.GHA_RELEASE_WORKFLOW) {
    version = "${mod_version}"
} else if (env.GITHUB_RUN_NUMBER) {
    project.buildnumber = env.GITHUB_RUN_NUMBER
    version = "${mod_version}-${release_type}+${buildnumber}-gha"
} else {
    project.buildnumber = env.BUILD_NUMBER ?: 'custom'
    version = "${mod_version}-${release_type}+${buildnumber}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        minecraftVersion = minecraft_version
        mappingsVersion = parchment_version
    }

    addModdingDependenciesTo sourceSets.test

    runs {
        client {
            client()

            programArguments.addAll '--username', 'Dev' + new Random().nextInt(999)
        }

        server {
            server()

            programArgument '--nogui'
        }

        data {
            clientData()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            logLevel = org.slf4j.event.Level.WARN
        }
    }

    mods {
        "${project.mod_id}" {
            sourceSet sourceSets.main
            sourceSet sourceSets.test
        }
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

repositories {
    maven {
        url = 'https://maven.gegy.dev/releases'
        content {
            includeGroup 'org.lovetropics'
            includeGroup 'com.tterrag.registrate'
            includeGroup 'eu.pb4'
        }
    }
    mavenLocal()
}

dependencies {
    jarJar(implementation("com.tterrag.registrate:Registrate-LT:MC1.21.8-${registrate_version}")) {
        version {
            strictly "[MC1.21.8-${registrate_version},MC1.22)"
            prefer "MC1.21.8-${registrate_version}"
        }
    }

    jarJar(implementation("org.lovetropics:LTLib:$ltlib_version"))
    jarJar(implementation("eu.pb4:placeholder-api-lt:$placeholder_api_version"))
}

var generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}
sourceSets.main.resources.srcDir generateModMetadata

neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
